# Ultramat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  build.sh  dewit.sh  doit.sh  drinkarray.c  drinklists.c  drinks.c  gui.c  hello-world-gtk  io.github.kleinspeedy.ultramat.yml  main.c  meson.build  pages.c  position.c  position.h  recipes.txt  rpi3_cross_compile.txt  run.sh  style.css
.github/workflows/: build.yml  c-cpp.yml  ci-cd.yml
arduino/: README.md  arduino.ino  build.sh  flash.sh
ext/: README.md
ext/cJSON/: CMakeLists.txt
inc/: Callbacks.h  DrinkManagement.h  GtkLists.h  Gui.h  SerialHandler.h  buffer.h  callbacks.h  callbacks_info.h  callbacks_position.h  checks.h  command_handler.h  drinkarray.h  drinklists.h  drinks.h  dynamic_array.h  gui.h  helper.h  ingredient.h  message_handler.h  pages.h  proto_serial.h  recipe.h  serialcom.h  serialcomms.h
inc/util/: cmd_buffer.h  dynamic_array.h  queue.h  ring_buffer.h
proto/: commands.options  commands.proto
res/: drinks.json  ingredients.json  ingredients.txt  recipes.json  recipes.txt  style.css  ultramat.ui  ultramat_1_1.glade
scripts/: commands_pb2.py  gen_py_proto.sh  microcontroller_serial_sim.py  proto_serial.py  release_builder.sh  serial_testing.sh  ultra_version.h.in  valgrind.sh
src/: CMakeLists.txt  Callbacks.c  DrinkManagement.c  Gui.c  SerialHandler.c  buffer.c  callbacks.c  callbacks_info.c  callbacks_position.c  command_handler.c  drinkarray.c  drinklists.c  drinks.c  dynamic_array.c  gui.c  ingredient.c  main.c  meson.build  message_handler.c  pages.c  proto_serial.c  recipe.c  serialcom.c  serialcomms.c
src/lua/: check_latest_version.lua
src/util/: cmd_buffer.c  dynamic_array.c  meson.build  queue.c  ring_buffer.c
