# Source file directory

# include util files
util_files=[]
subdir('util')

source_files=[
  files('callbacks_position.c'),
  files('command_handler.c'),
  files('drinklists.c'),
  files('drinks.c'),
  files('gui.c'),
  files('main.c'),
  files('message_handler.c'),
  files('pages.c'),
  files('serialcomms.c'),
  util_files
]
